templates/ingress-mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  namespace: nginx-mariadb
spec:
  ingressClassName: nginx
  rules:
  - host: mariadb-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb-service
            port:
              number: 3306
